--- a/settings_panel.html
+++ b/settings_panel.html
@@ -1,19 +1,21 @@
 <html>
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <style>
-    /* Google fonts */
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap');
-    * {
-        font-family: 'Roboto Mono', monospace;
-    }
-
     body {
-        width: 400px;
-        height: 1000px;
+        padding: 7%;
+        width: 300px;
     }
 </style>
 
 <body>
-    <h1>Settings</h1>
+    <h1>YT-Shell <small class="text-muted">Settings</small></h1>
+    
+    <div class="container-fluid" id="settingsPanel"></div>
+
+    <!-- Settings JS -->
+    <script src="settings.js"></script>
 </body>
 
 </html>
