--- a/settings_panel/popup.html
+++ b/settings_panel/popup.html
@@ -3,6 +3,12 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+    * {
+        font-family: 'Roboto Condensed', sans-serif;
+    }
+
     body {
         width: 300px;
     }
@@ -15,14 +21,22 @@
 
 <body class="m-2">
     <h1 class="text-center mb-1 mt-3"><span class="fw-bold">YT-Shell</span>
-        <small class="fw-normal text-muted">Settings</small>
+        <small class="fw-normal text-muted">&middot; Settings</small>
     </h1>
 
     <div id="reload-div" class="text-center fst-italic invisible">
         <a id="reload-button" href="#" class="link-dark fw-bold">Refresh</a> the page to apply the settings.
     </div>
 
-    <div class="container-fluid" id="settingsPanel"></div>
+    <div class="container-fluid" id="settingsPanel">
+        <div class="row my-2">
+            <div class="col col-10">
+                <p class="fw-bold my-0">Test Setting</p>
+                <p><small class="text-muted">Desc here</small></p>
+            </div>
+            <div class="col col-1"><input id="${key}" type="checkbox" class="form-check-input"></div>
+        </div>
+    </div>
 
     <footer class="container p-2 text-center">
         <small class="text-muted">
