Minor CSS fixes

--- a/settings_panel/popup.html
+++ b/settings_panel/popup.html
@@ -37,6 +37,7 @@
         opacity: 0;
         font-size: 1.4rem;
         color: #666;
+        pointer-events: none;
     }
 
     body {
@@ -131,9 +132,9 @@
     <footer class="container p-2 text-center">
         <small class="text-muted">
             YT-Shell &middot;
-            <a href="https://github.com/rijkvp" class="link-secondary">@rijkvp</a> &middot;
-            <a href="https://github.com/rijkvp/yt-shell" class="link-secondary">source</a> &middot;
-            <a href="https://github.com/rijkvp/yt-shell/issues/new" class="link-secondary">submit issue</a>
+            <a href="https://github.com/rijkvp" class="link-secondary" target="_blank">@rijkvp</a> &middot;
+            <a href="https://github.com/rijkvp/yt-shell" class="link-secondary" target="_blank">source</a> &middot;
+            <a href="https://github.com/rijkvp/yt-shell/issues/new" class="link-secondary" target="_blank">submit issue</a>
         </small>
     </footer>
     <!-- Settings JS -->
