Polishments: Icons & Bugfixes

--- a/settings_panel/popup.html
+++ b/settings_panel/popup.html
@@ -123,7 +123,7 @@
         <div class="row my-2">
             <div class="col col-10">
                 <p class="fw-bold my-0">Hide avatars</p>
-                <p><small class="text-muted">WIP: Hides profile avatars from channels and users.</small></p>
+                <p><small class="text-muted">Hides avatars from channels and users.</small></p>
             </div>
             <div class="col col-1"><input id="hide_avatars" type="checkbox" class="form-check-input"></div>
         </div>
