Updated injected styles + small improvements

--- a/settings_panel/popup.html
+++ b/settings_panel/popup.html
@@ -73,7 +73,7 @@
 
 <body class="m-1 mt-3">
     <h1 class="text-center mb-1 mt-1"><span class="fw-bold">YT-Shell</span>
-        <small class="fw-normal text-muted">&middot; Settings</small>
+        <small class="fw-normal text-muted">- Settings</small>
     </h1>
 
     <div id="status" class="text-center">
@@ -112,7 +112,7 @@
             </div>
             <div class="col col-1"><input id="hide_upcummies" type="checkbox" class="form-check-input"></div>
         </div>
-        <h2>Other</h2>
+        <h2>Anti-clickbait</h2>
         <div class="row my-2">
             <div class="col col-10">
                 <p class="fw-bold my-0">Hide thumbnails</p>
