Page loading improvements

--- a/settings_panel/popup.html
+++ b/settings_panel/popup.html
@@ -94,7 +94,7 @@
         <div class="row my-2">
             <div class="col col-10">
                 <p class="fw-bold my-0">Block explore feeds</p>
-                <p><small class="text-muted">Redirect when acessing explore feeds like trending.</small></p>
+                <p><small class="text-muted">Hide and redirect explore feeds like trending.</small></p>
             </div>
             <div class="col col-1"><input id="block_explore_feeds" type="checkbox" class="form-check-input"></div>
         </div>
